# Backend

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  alert-rules.yml  alertmanager.yml  docker-compose-deploy.yml  docker-compose-jenkins.yml  docker-compose.yml  jenkins.Dockerfile  prometheus.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: feature.md
chatgpt/: bots.py  urls.py  views.py
config/: __init__.py  celery.py  settings.py  urls.py
practice/: models.py  openaiService.py  urls.py  views.py
practice/migrations/: 0001_initial.py
practice/pdf/: apps.py  models.py
practice/pdf/migrations/: 0001_initial.py
swagger/: file_upload_docs.py  urls.py
temp/: models.py  openaiService.py  serializers.py  urls.py  views.py
temp/langchain/: models.py  serializers.py  services.py  tasks.py  urls.py  utils.py  views.py
temp/migrations/: 0001_initial.py  0002_delete_uploadedpdf.py  0002_morequestion_is_answer_question_is_answer.py  0002_pineconesummary.py  0002_problem_summary.py  0003_initial.py  0003_question.py  0003_question_useranswer.py  0003_uploadedpdf_user_morequestion_question_useranswer.py  0004_moreuseranswer.py  0004_uploadedpdf_user.py  0004_useranswer.py  0005_summarypdf.py
temp/morequestion/: models.py  serializer.py  urls.py  views.py
temp/pdf/: models.py  urls.py  utils.py  views.py
temp/pinecone/: models.py  service.py  summary.py  tasks.py  urls.py  views.py
temp/question/: models.py  serializer.py  urls.py  views.py
temp/templates/temp/: item_confirm_delete.html  item_detail.html  item_form.html  item_list.html
temp/text/: services.py  tasks.py  urls.py  views.py
user/: models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py
