[project]
name = "winter-teamf-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "woohyun23",email = "parkwh0823@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.4,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "mysqlclient (>=2.2.6,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "drf-yasg (>=1.21.8,<2.0.0)",
    "openai (>=1.59.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
